--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,25 +1,7 @@
-
-
 [theme]
 
-# The preset Streamlit theme that your custom theme inherits from. One of "light" or "dark".
-# The value below was set in /home/kon/.streamlit/config.toml
-base = "dark"
-
-# Primary accent color for interactive elements.
-# The value below was set in /home/kon/.streamlit/config.toml
-primaryColor = "#b56f68"
-
-# Background color for the main content area.
-#backgroundColor =
-
-# Background color used for the sidebar and most interactive widgets.
-#secondaryBackgroundColor =
-
-# Color used for almost all text.
-#textColor =
-
-# Font family for all text in the app, except code blocks. One of "sans serif", "serif", or "monospace".
-# The value below was set in /home/kon/.streamlit/config.toml
-font = "monospace"
+base="dark"
+primaryColor="#873c37"
+textColor="#e2e2e2"
+font="monospace"
 
