--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,10 +1,5 @@
 [theme]
-
 base="dark"
-primaryColor="#873c37"
+primaryColor="#8e7965"
 textColor="#e2e2e2"
 font="monospace"
-
-
-[global]
-dataFrameSerialization = "legacy"
